# IntroToGraphics

rasterizer/: CMakeLists.txt  README  camera.h  image.h  lightingparameters.h  matrix.h  rasterizer.cxx  run  screen.h  space.h  triangle.h
